docs(blog): fix grammar

--- a/apps/blog/content/canon-software-engineer-events.mdx
+++ b/apps/blog/content/canon-software-engineer-events.mdx
@@ -8,10 +8,10 @@ modified: 2024-07-16
 ---
 
 - Exiting `vim` for the first time.
-- Dependency hell. Often manifests itself through `npm` peer dependency conflicts that you have no control over, or gradle dependencies seemingly not updating, when in reality they are being pulled from a cache you didn’t know about. Welcome to caching.
+- Dependency hell. Often manifests itself through `npm` peer dependency conflicts that you have no control over, or Gradle dependencies seemingly not updating, when in reality they are being pulled from a cache you didn’t know about. Welcome to caching.
 - Mispronouncing ”cache”.
 - Saying “ess, queue, ell”.
-- Thinking everyone *else* is a bad programmer, and that you’re the only good one. Surely your “yaml as code” idea is the most sound solution (ahem, GitHub actions), and this “dependency injection” nonsense is just a bunch of boilerplate overhead.
+- Thinking everyone *else* is a bad programmer, and that you’re the only good one. Surely your “yaml as code” idea is the most sound solution (ahem, GitHub Actions), and this “dependency injection” nonsense is just a bunch of boilerplate overhead.
 - Thinking everyone *else* is a good programmer, and that you're the only bad one. Welcome to imposter syndrome.
 - If you went to school for CS/software, being taught multiple inheritance, polymorphism, and recursion are practical solutions to everyday coding problems.
 - Realising the dev who just joined your team that you are training is being paid more than you out the gate.
