blog(formatting): favourite coding youtubers

--- a/apps/blog/content/favourite-coding-youtubers.mdx
+++ b/apps/blog/content/favourite-coding-youtubers.mdx
@@ -5,16 +5,16 @@ tags:
     - Miscellaneous
 author: Cameron Ball
 created: 2023-07-05
-modified: 2024-08-21
+modified: 2024-08-22
 ---
 
 A list of my favourite coding YouTubers, categorised.
 
-**Bolded** indicates a top favourite.
+***Bold + italicised*** indicates a top favourite.
 
 ## DSA & LeetCode
 
-- [NeetCode](https://www.youtube.com/@NeetCode) - a favourite is [My Brain after 569 Leetcode Problems](https://www.youtube.com/watch?v=8wysIxzqgPI)
+- [NeetCode](https://www.youtube.com/@NeetCode) – a favourite is [My Brain after 569 Leetcode Problems](https://www.youtube.com/watch?v=8wysIxzqgPI)
 
 ## Topic-specific
 
@@ -23,21 +23,21 @@ A list of my favourite coding YouTubers, categorised.
   - [***ArjanCodes***](https://www.youtube.com/@ArjanCodes)
 - C/C++
   - [Jacob Sorber](https://www.youtube.com/@JacobSorber)
-  - again, [***mCoding***](https://www.youtube.com/@mCoding)
+  - Again, [***mCoding***](https://www.youtube.com/@mCoding)
 - Web Dev
-  - [Matt Pocock](https://www.youtube.com/@mattpocockuk) - specifically TypeScript
+  - [Matt Pocock](https://www.youtube.com/@mattpocockuk) – specifically TypeScript
   - [developedbyed](https://www.youtube.com/@developedbyed)
-  - [Web Dev Simplified](https://www.youtube.com/@WebDevSimplified) - as much as his content is a bit corny, it's solid for beginner web concepts
+  - [Web Dev Simplified](https://www.youtube.com/@WebDevSimplified) – as much as his content is a bit corny, it's solid for beginner web concepts
 - Rust
   - [Let's Get Rusty](https://www.youtube.com/@letsgetrusty)
   - [No Boilerplate](https://www.youtube.com/@NoBoilerplate)
 
 ## General
 
-- [***Fireship***](https://www.youtube.com/@Fireship) - Jeff's legendary "\<topic> in 100 Seconds" series
-- [Beyond Fireship](https://www.youtube.com/@beyondfireship) - Jeff's longer-form content
+- [***Fireship***](https://www.youtube.com/@Fireship) – Jeff's legendary "\[technology] in 100 Seconds" series
+- [Beyond Fireship](https://www.youtube.com/@beyondfireship) – Jeff's longer-form content
 - [***CodeAesthetic***](https://www.youtube.com/@CodeAesthetic)
-- again, [No Boilerplate](https://www.youtube.com/@NoBoilerplate)
+- Again, [No Boilerplate](https://www.youtube.com/@NoBoilerplate)
 - [ThePrimeagen](https://www.youtube.com/@ThePrimeagen)/[ThePrimeTime](https://www.youtube.com/@ThePrimeTimeagen)
 - [Coderized](https://youtube.com/@coderized?si=QbvEK8kpFjgxCEXZ)
 
@@ -45,7 +45,7 @@ A list of my favourite coding YouTubers, categorised.
 
 - [Programmers are also human](https://www.youtube.com/@programmersarealsohuman5909)
 - [Mr. P Solver](https://www.youtube.com/playlist?list=PLkdGijFCNuVmu35l6EJxdvsvf7xj4EQVf)
-- [KRAZAM](https://www.youtube.com/krazam) - especially “Microservices”
+- [KRAZAM](https://www.youtube.com/krazam) – especially “Microservices”
 
 ## Math/CS
 
