--- a/apps/blog/content/canon-software-engineer-events.mdx
+++ b/apps/blog/content/canon-software-engineer-events.mdx
@@ -2,6 +2,7 @@
 title: Canon Software Engineer Events
 tags:
     - Career
+    - Miscellaneous
 author: Cameron Ball
 created: 2023-11-22
 modified: 2024-07-16
