--- a/apps/blog/content/favourite-coding-youtubers.mdx
+++ b/apps/blog/content/favourite-coding-youtubers.mdx
@@ -5,7 +5,7 @@ tags:
     - Miscellaneous
 author: Cameron Ball
 created: 2023-07-05
-modified: 2024-08-22
+modified: 2024-08-27
 ---
 
 A list of my favourite coding YouTubers, categorised.
@@ -25,6 +25,7 @@ A list of my favourite coding YouTubers, categorised.
   - [Jacob Sorber](https://www.youtube.com/@JacobSorber)
   - Again, [***mCoding***](https://www.youtube.com/@mCoding)
 - Web Dev
+  - [***Theo - t3․gg***](https://www.youtube.com/@t3dotgg)
   - [Matt Pocock](https://www.youtube.com/@mattpocockuk) – specifically TypeScript
   - [developedbyed](https://www.youtube.com/@developedbyed)
   - [Web Dev Simplified](https://www.youtube.com/@WebDevSimplified) – as much as his content is a bit corny, it's solid for beginner web concepts
