blog(edits): typos

--- a/apps/blog/content/how-i-stay-informed-as-a-dev.mdx
+++ b/apps/blog/content/how-i-stay-informed-as-a-dev.mdx
@@ -5,7 +5,7 @@ tags:
     - Career
 author: Cameron Ball
 created: 2024-07-13
-modified: 2024-08-27
+modified: 2024-09-02
 ---
 
 ## YouTube Channels
@@ -24,7 +24,7 @@ You have to filter through a bit of junk influencer profiles, but I've managed t
 
 ## Email Lists/Newsletters
 
-I like having great new content delivered to my inbox to remind me about topics I haven’t read about in awhile, or to inform me of new content by my favourite coding/swe youtubers. Here’s a few that I'm subscribed to that I highly recommend:
+I like having great new content delivered to my inbox to remind me about topics I haven’t read about in awhile, or to inform me of new content by my favourite coding/swe YouTubers. Here’s a few that I'm subscribed to that I highly recommend:
 
 - [ByteByteGo](https://blog.bytebytego.com/)
 - [daily.dev](https://daily.dev)
