blog(edit): add youtuber to favourites article

--- a/apps/blog/content/favourite-coding-youtubers.mdx
+++ b/apps/blog/content/favourite-coding-youtubers.mdx
@@ -41,6 +41,7 @@ A list of my favourite coding YouTubers, categorised.
 - Again, [No Boilerplate](https://www.youtube.com/@NoBoilerplate)
 - [ThePrimeagen](https://www.youtube.com/@ThePrimeagen)/[ThePrimeTime](https://www.youtube.com/@ThePrimeTimeagen)
 - [Coderized](https://youtube.com/@coderized?si=QbvEK8kpFjgxCEXZ)
+- [Tom on the Internet](https://www.youtube.com/@tomontheinternet)
 
 ## Comedy
 
