feat(blog): add article descriptions

--- a/apps/blog/content/elegant-cli-design.mdx
+++ b/apps/blog/content/elegant-cli-design.mdx
@@ -4,6 +4,7 @@ tags:
     - Python
     - CLI
     - UX
+description: Presented at American Express' GuildCon '24 on behalf of the Python Guild.
 author: Cameron Ball
 created: 2024-09-17
 modified: 2024-09-19
