--- a/apps/blog/content/favourite-coding-youtubers.mdx
+++ b/apps/blog/content/favourite-coding-youtubers.mdx
@@ -3,6 +3,7 @@ title: My Favourite Coding YouTubers
 tags:
     - Learning
     - Miscellaneous
+description: Great SWE/coding YouTube content is hard to come by; here's a curated list of my favourites.
 author: Cameron Ball
 created: 2023-07-05
 modified: 2024-08-27
