--- a/apps/blog/content/how-i-stay-informed-as-a-dev.mdx
+++ b/apps/blog/content/how-i-stay-informed-as-a-dev.mdx
@@ -3,6 +3,7 @@ title: How I Stay Informed as a Dev
 tags:
     - Learning
     - Career
+description: Staying informed is an unspoken requirement for any modern dev. Here's my technique for keeping up-to-date.
 author: Cameron Ball
 created: 2024-07-13
 modified: 2024-09-02
