--- a/apps/blog/content/how-to-learn-as-a-software-engineer.mdx
+++ b/apps/blog/content/how-to-learn-as-a-software-engineer.mdx
@@ -3,6 +3,7 @@ title: How to Learn as a Software Engineer
 tags:
     - Learning
     - Career
+description: Great engineers can learn any technology in a reasonable amount of time. Learning how to learn enables you to level up exponentially as a dev.
 author: Cameron Ball
 created: 2024-05-03
 modified: 2024-08-27
