--- a/apps/blog/content/notes-on-concurrency.mdx
+++ b/apps/blog/content/notes-on-concurrency.mdx
@@ -3,12 +3,11 @@ title: Notes on Concurrency
 tags:
     - Concurrency & Parallelism
     - Threading
+description: My personal notes following Chapter 13, 'Concurrency', of 'Clean Code' by Robert C. Martin, for my software engineering book club.
 author: Cameron Ball
 created: 2024-09-01
 modified: 2024-09-05
 ---
-
-*My personal notes following Chapter 13 – Concurrency, of 'Clean Code' by Robert C. Martin, for my software engineering book club.*
 
 *Reader's note: Italicised text and text under italicised headings are my own commentary or added content, as opposed to paraphrased content following Chapter 13 of 'Clean Code'.*
 
