--- a/apps/blog/content/subdomains-with-vercel-monorepo.mdx
+++ b/apps/blog/content/subdomains-with-vercel-monorepo.mdx
@@ -4,6 +4,7 @@ tags:
     - Vercel
     - Svelte
     - Monorepo
+description: How I create an excellent DX and keep my codebase DRY for many subdomains of a SvelteKit project.
 author: Cameron Ball
 created: 2024-07-13
 modified: 2024-09-22
