--- a/apps/blog/content/canon-software-engineer-events.mdx
+++ b/apps/blog/content/canon-software-engineer-events.mdx
@@ -3,6 +3,7 @@ title: Canon Software Engineer Events
 tags:
     - Career
     - Miscellaneous
+description: Any seasoned dev should get a kick out of this list. For newer devs, a preview of what to look forward to.
 author: Cameron Ball
 created: 2023-11-22
 modified: 2024-07-16
