blog(edit): add youtuber to favourites article

--- a/apps/blog/content/favourite-coding-youtubers.mdx
+++ b/apps/blog/content/favourite-coding-youtubers.mdx
@@ -6,7 +6,7 @@ tags:
 description: Great SWE/coding YouTube content is hard to come by; here's a curated list of my favourites.
 author: Cameron Ball
 created: 2023-07-05
-modified: 2024-08-27
+modified: 2024-10-18
 ---
 
 A list of my favourite coding YouTubers, categorised.
@@ -41,8 +41,9 @@ A list of my favourite coding YouTubers, categorised.
 - [***CodeAesthetic***](https://www.youtube.com/@CodeAesthetic)
 - Again, [No Boilerplate](https://www.youtube.com/@NoBoilerplate)
 - [ThePrimeagen](https://www.youtube.com/@ThePrimeagen)/[ThePrimeTime](https://www.youtube.com/@ThePrimeTimeagen)
-- [Coderized](https://youtube.com/@coderized?si=QbvEK8kpFjgxCEXZ)
+- [Coderized](https://www.youtube.com/@coderized)
 - [Tom on the Internet](https://www.youtube.com/@tomontheinternet)
+- [Kiki's Bytes](https://www.youtube.com/@kikisbytes)
 
 ## Comedy
 
