blog(upload): python automatic docs generation

--- a/apps/blog/content/subdomains-with-vercel-monorepo.mdx
+++ b/apps/blog/content/subdomains-with-vercel-monorepo.mdx
@@ -221,7 +221,7 @@ Now, `npm test` will work as expected when run from anywhere in your project, te
 
 After pushing to main, I immediately got a build failure as the root directory was not configured for our new monorepo structure. In Vercel's general settings, I simply had to [specify the proper root directory](https://vercel.com/docs/monorepos#using-monorepos-with-vercel-dashboard):
 
-![Setting the root directory in Vercel's web UI](./assets/vercel_root_dir.png)
+![Setting the root directory in Vercel's web UI](./assets/vercel-root-dir.png)
 
 After this, I went to the failed deployment, clicked redeploy, and everything was smooth sailing, first try. That was fairly relieving, lol.
 
