--- a/apps/blog/content/python-type-checking-fallacy.mdx
+++ b/apps/blog/content/python-type-checking-fallacy.mdx
@@ -8,7 +8,7 @@ created: 2022-05-04
 modified: 2024-03-31
 ---
 
-> Checking Types with `is` versus `isinstance()`
+Take a look at the following code evaluations:
 
 ```py
 >>> class MyError(IndexError):
