blog(edit): add youtubers to favourites article

--- a/apps/blog/content/favourite-coding-youtubers.mdx
+++ b/apps/blog/content/favourite-coding-youtubers.mdx
@@ -6,7 +6,7 @@ tags:
 description: Great SWE/coding YouTube content is hard to come by; here's a curated list of my favourites.
 author: Cameron Ball
 created: 2023-07-05
-modified: 2024-10-18
+modified: 2025-04-26
 ---
 
 A list of my favourite coding YouTubers, categorised.
@@ -33,6 +33,9 @@ A list of my favourite coding YouTubers, categorised.
 - Rust
   - [Let's Get Rusty](https://www.youtube.com/@letsgetrusty)
   - [No Boilerplate](https://www.youtube.com/@NoBoilerplate)
+- System Design and Related
+  - [Kiki's Bytes](https://www.youtube.com/@kikisbytes)
+  - [Kevin Fang](https://www.youtube.com/@kevinfaang) – notable postmortems
 
 ## General
 
@@ -43,7 +46,7 @@ A list of my favourite coding YouTubers, categorised.
 - [ThePrimeagen](https://www.youtube.com/@ThePrimeagen)/[ThePrimeTime](https://www.youtube.com/@ThePrimeTimeagen)
 - [Coderized](https://www.youtube.com/@coderized)
 - [Tom on the Internet](https://www.youtube.com/@tomontheinternet)
-- [Kiki's Bytes](https://www.youtube.com/@kikisbytes)
+- [Better Stack](https://www.youtube.com/@betterstack)
 
 ## Comedy
 
