blog(edit): add youtuber to favourites article

--- a/apps/blog/content/favourite-coding-youtubers.mdx
+++ b/apps/blog/content/favourite-coding-youtubers.mdx
@@ -6,7 +6,7 @@ tags:
 description: Great SWE/coding YouTube content is hard to come by; here's a curated list of my favourites.
 author: Cameron Ball
 created: 2023-07-05
-modified: 2025-04-26
+modified: 2025-05-26
 ---
 
 A list of my favourite coding YouTubers, categorised.
@@ -28,6 +28,7 @@ A list of my favourite coding YouTubers, categorised.
 - Web Dev
   - [***Theo - t3․gg***](https://www.youtube.com/@t3dotgg)
   - [Matt Pocock](https://www.youtube.com/@mattpocockuk) – specifically TypeScript
+  - [Joy of Code](https://www.youtube.com/@JoyofCodeDev) – specifically Svelte
   - [developedbyed](https://www.youtube.com/@developedbyed)
   - [Web Dev Simplified](https://www.youtube.com/@WebDevSimplified) – as much as his content is a bit corny, it's solid for beginner web concepts
 - Rust
@@ -43,10 +44,10 @@ A list of my favourite coding YouTubers, categorised.
 - [Beyond Fireship](https://www.youtube.com/@beyondfireship) – Jeff's longer-form content
 - [***CodeAesthetic***](https://www.youtube.com/@CodeAesthetic)
 - Again, [No Boilerplate](https://www.youtube.com/@NoBoilerplate)
-- [ThePrimeagen](https://www.youtube.com/@ThePrimeagen)/[ThePrimeTime](https://www.youtube.com/@ThePrimeTimeagen)
+- [***ThePrimeagen***](https://www.youtube.com/@ThePrimeagen)/[ThePrimeTime](https://www.youtube.com/@ThePrimeTimeagen)
 - [Coderized](https://www.youtube.com/@coderized)
 - [Tom on the Internet](https://www.youtube.com/@tomontheinternet)
-- [Better Stack](https://www.youtube.com/@betterstack)
+- [***Better Stack***](https://www.youtube.com/@betterstack)
 
 ## Comedy
 
